--- a/streamland/pom.xml
+++ b/streamland/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- I had to change the compiler.source and compiler.target versions to 1.8, versions <=1.7 are not supported -->
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
